<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="30dp"
    android:paddingHorizontal="20dp"
    tools:context=".ui.detail.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            tools:visibility="visible" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/detail_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:src="@tools:sample/avatars"
                tools:ignore="ContentDescription"
                android:layout_marginBottom="30dp"/>

            <!-- FAB positioned to overlap the ImageView slightly -->
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/favoriteFAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/toggle_favorite_icon"
            android:src="@drawable/baseline_favorite_border_24"/>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <TextView
            android:id="@+id/detail_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/detail_owner"
            />

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/detail_title"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginVertical="5dp"
            />

        <TextView
            android:id="@+id/detail_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/detail_time"
            />
        <TextView
            android:id="@+id/detail_quota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/detail_quota"
            android:layout_marginBottom="20dp"
            />



        <TextView
            android:id="@+id/detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            tools:text="@string/detail_description"
            android:justificationMode="inter_word"
            />

        <Button
            android:id="@+id/action_register"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_event"/>

    </LinearLayout>

</ScrollView>